--- a/style.css
+++ b/style.css
@@ -473,7 +473,7 @@ span{
 	display: inline-flex;
 	justify-content: center;
 	align-items: center;
-	padding: .1rem;
+	padding: 1rem;
 	background: var(--main-color);
 	border-radius: 1.2rem;
 	transition: .5s ease;
@@ -577,12 +577,175 @@ span{
 }
 
 .services-skills{
-	height: 70vh;
-	background-image: linear-gradient(rgba(0, 0, 0, 0.8)/* first color code*/,rgba(0,0,0,0.8)), url('images/Nairobi-City-County-12-2.jpg')/*background image*/;
-	background-position: center;
-	background-size: cover;
+	height: auto;
+	background-image: linear-gradient(rgba(0, 0, 0, 0.6)/* first color code*/,rgba(0,0,0,0.6)), url('images/2488997.jpg')/*background image*/;
+	background-position: fixed;
+	border-radius: 1.5rem;
 	text-align: center;
-	width: 80vw;
+	padding-bottom: 30px;
+}
+
+.services-skills h1{
+	font-size: 26px;
+	padding: 25px 0 10px;
+}
+
+.services-skills p{
+	font-weight: 450;
+}
+
+.services-skills a{
+	padding: 8px 24px 8px;
+}
+
+
+/*--- price table ---*/
+.pricing-table{
+/*	background: #f8f8f8;*/
+	padding: 0px 0px 50px;
+}
+
+.hero-btn.red-btn a{
+	font-size: 2.25rem;
+}
+
+.hero-btn{
+	display: inline-block;
+	text-decoration: none;
+	color: #fff;
+	border: 1px solid #fff;
+	padding: 12px 34px;
+	font-size: 1.5rem;
+	background: transparent;
+	position: relative;
+	cursor: pointer;
+}
+
+.hero-btn:hover{
+	border: 1px solid var(--submain-color);
+	background: var(--submain-color);
+	transition: 1s;
+}
+
+.red-btn{
+	border: .125rem solid var(--text-color);
+	border-radius: 9px;
+	background: transparent;
+	color: var(--main-color);
+/*	padding: 12px 34px;*/
+}
+
+.red-btn:hover{
+	color: #fff;
+}
+
+.pricing-table .details{
+	width: 90%;
+	max-width: 500px;
+	text-align: center;
+	margin: 0 auto;
+	padding: 40px 20px;
+}
+
+.pricing-table .details h2{
+	font-size: 20px;
+	margin-bottom: 3px;
+	color: #ffffff;
+}
+
+.pricing-table .details p{
+	font-size: 15px;
+}
+
+.pricing-table .grid{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	gap: 20px 10px;
+	padding: 20px;
+}
+
+.pricing-table .grid .box{
+	width: 250px;
+	border: .07rem solid var(--main-color);
+	text-align: center;
+	padding: 20px;
+	background: var(--submain-color);
+	border-radius: 10px;
+	box-shadow: 0px 2px 10px 5px rgba(0, 0, 0, 0.75);
+}
+
+.pricing-table .grid .box .title{
+	font-size: 16px;
+	font-weight: 600;
+	margin-bottom: 20px;
+	color: #000;
+}
+
+.pricing-table .grid .box .price{
+	margin-bottom: 20px;
+}
+
+.pricing-table .grid .box.professional .price b{
+	display: block;
+	font-size: 40px;
+	margin-bottom: -5px;
+	color: #fff;
+	padding-bottom: 12px;
+}
+
+.pricing-table .grid .box .price b{
+	display: block;
+	font-size: 40px;
+	margin-bottom: -5px;
+	color: #000;
+	padding-bottom: 12px;
+}
+
+.pricing-table .grid .box .features > *{
+	color: #000;
+	padding: 8px 0px;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.pricing-table .grid .box .button a{
+	width: 100%;
+	margin: 25px 0px 0px;
+	padding: 10px 60px 10px;
+	background: linear-gradient(to bottom, var(--second-bg-color), var(--bg-color));
+	color: var(--text-color);
+	border-radius: 5px;
+	outline: none;
+	border: none;
+	font-weight: 600;
+	cursor: pointer;
+}
+
+.pricing-table .grid .box .button{
+	padding: 38px 0 9px;
+}
+
+.pricing-table .grid .box.professional{
+	transform:  scale(1.1);
+	background: linear-gradient(to bottom, var(--second-bg-color), var(--bg-color));
+}
+
+.pricing-table .grid .box.professional .title{
+	color: #eee;
+}
+
+.pricing-table .grid .box.professional .price{
+	color: #fff;	
+}
+
+.pricing-table .grid .box.professional .features > *{
+	color: #fff;
+	border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+}
+
+.pricing-table .grid .box.professional .button a{
+	background: #fff;
+	color: var(--second-bg-color);
 }
 
 
@@ -633,6 +796,20 @@ span{
 	.portfolio-box h4, p{
 		font-size: 1.8rem;
 	}
+	.services-skills{
+		height: auto;
+		background-image: linear-gradient(rgba(0, 0, 0, 0.6)/* first color code*/,rgba(0,0,0,0.6)), url('images/3228895.jpg')/*background image*/;
+		background-position: fixed;
+		border-radius: 1.5rem;
+		text-align: center;
+		padding-bottom: 30px;
+	}
+	.pricing-table .grid{
+		gap: 20px;
+	}
+	.pricing-table .grid .box.professional{
+		transform: scale(1.05);
+	}
 	.contact{
 		min-height: auto;
 	}
@@ -649,10 +826,10 @@ span{
 
 @media (max-width: 768px){
 	.header{
-		padding: 1.25rem 10% 0.25rem;
+		padding: 1.25rem 10% 0.75rem;
 	}
 	.header2{
-		padding: 1.25rem 10% 0.25rem;		
+		padding: 1.25rem 10% 0.75rem;		
 	}
 	#menu-icon{
 		display: block;
