changed the read more button to what i can do 4 u

--- a/style.css
+++ b/style.css
@@ -438,6 +438,10 @@ span{
 	cursor: pointer;
 }
 
+.row{
+	padding-bottom: 30px;
+}
+
 .footer{	
 	background: var(--second-bg-color);
 	display: flex;
