--- a/style.css
+++ b/style.css
@@ -499,9 +499,9 @@ span{
 	display: inline-flex;
 	justify-content: center;
 	align-items: center;
-	padding: 1rem;
+	padding: .5rem;
 	background: var(--main-color);
-	border-radius: 1.2rem;
+	border-radius: 2.2rem;
 	transition: .5s ease;
 }
 
