--- a/style.css
+++ b/style.css
@@ -981,9 +981,9 @@ span{
 }
 
 @media (max-width: 365px){
-	.footer{
+	/*.footer{
 		flex-direction: column-reverse;
-	}
+	}*/
 	/*.footer p{
 		text-align: center;
 		margin-top: 2rem;
