--- a/style.css
+++ b/style.css
@@ -370,7 +370,18 @@ span{
 }
 
 .no_footer_text h4{
-	padding-top: 0.5rem;
+	padding: 0.5rem 0 0rem;
+}
+
+.servicexp{
+	flex-direction: column;
+	width: 280px;
+	padding-top: 1rem;
+}
+
+.servicexp p{
+	color: var(--text-color);
+	padding-bottom: 0.1rem;
 }
 
 .contact{
@@ -394,7 +405,7 @@ span{
 
 .row img{
 	width: 9vw;
-	padding-bottom: 0.2rem;
+	padding-top: 0.2rem;
 	display: flex;
 	justify-content: center;
 	align-items: center;
